--- a/package.json
+++ b/package.json
@@ -1,14 +1,22 @@
 {
   "name": "waterlogged-website",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "iot",
+    "rain gauge",
+    "weather",
+    "lorawan",
+    "thingspeak"
+  ],
+  "author": "Waterlogged Team (Annie, Charlie, Nava, Peyton, Will)",
   "license": "ISC",
-  "description": "",
+  "description": "Web application for the Waterlogged IoT rain gauge system",
   "dependencies": {
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
